# intoif

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: lib.rs  option.rs  result.rs
